# peerpiper

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: build-and-release.yml  rust.yml
crates/contact-book/: Cargo.toml  README.md  justfile
crates/contact-book/src/: bindings.rs  contacts.rs  countries.rs  lib.rs  state.rs
crates/contact-book/src/templates/: card.html  form.html  index.html  output.html  profile.html  upload.html
crates/contact-book/wit/: world.wit
crates/extension-echo/: Cargo.toml  justfile
crates/extension-echo/src/: bindings.rs  lib.rs
crates/extension-echo/tests/: mod.rs
crates/extension-echo/wit/: world.wit
crates/interop-tests/: Cargo.toml  README.md  justfile
crates/interop-tests-plugin/: Cargo.toml  README.md  justfile
crates/interop-tests-plugin/src/: bindings.rs  lib.rs
crates/interop-tests-plugin/tests/: test_layer.rs  wasmtime.rs
crates/interop-tests-plugin/tests/exts/: log.txt
crates/interop-tests-plugin/wit/: world.wit
crates/interop-tests/src/: lib.rs
crates/interop-tests/static/: index.html
crates/peerpiper/: Cargo.toml  README.md
crates/peerpiper-browser/: CHANGELOG.md  Cargo.toml  README.md  justfile
crates/peerpiper-browser/src/: bindgen.rs  blockstore_idb.rs  error.rs  lib.rs  opfs.rs  wasm.rs
crates/peerpiper-browser/src/bindgen/: blockstore-idb.js  blockstore_idb.rs
crates/peerpiper-browser/src/blockstore/: blockstore_idb.rs  mod.rs  wnfs_blockstore.rs
crates/peerpiper-browser/tests/: web.rs
crates/peerpiper-core/: Cargo.toml  README.md
crates/peerpiper-core/src/: error.rs  events.rs  lib.rs  libp2p.rs
crates/peerpiper-core/src/libp2p/: api.rs  behaviour.rs  config.rs  delay.rs  error.rs  swarm.rs
crates/peerpiper-handler/: Cargo.toml  README.md
crates/peerpiper-handler/src/: bindings.rs  lib.rs
crates/peerpiper-handler/wit/: world.wit
crates/peerpiper-native/: Cargo.toml  README.md
crates/peerpiper-native/src/: blockstore.rs  error.rs  handler.rs  lib.rs  native_blockstore.rs
crates/peerpiper-plugins/: Cargo.toml  README.md  justfile
crates/peerpiper-plugins/src/: error.rs  lib.rs  sync.rs  tokio.rs  tokio_compat.rs  tokio_two.rs  utils.rs
crates/peerpiper-plugins/src/layer/: error.rs  instances.rs  mod.rs  platform.rs
crates/peerpiper-plugins/src/layer/wit/: host.wit
crates/peerpiper-plugins/src/tokio/: error.rs  mod.rs  pluggable.rs  plugin.rs
crates/peerpiper-server/: Cargo.toml  README.md  justfile
crates/peerpiper-server/src/: cloudflare.rs  extensions.rs  main.rs  web_server.rs
crates/peerpiper-server/wit/: world.wit
crates/peerpiper-wallet/: Cargo.toml  README.md  config.yml
crates/peerpiper-wallet/.cargo/: config.toml
crates/peerpiper-wallet/src/: bindings.rs  lib.rs  state.rs
crates/peerpiper-wallet/src/templates/: output.html  page.html
crates/peerpiper-wallet/tests/: mod.rs
crates/peerpiper-wallet/wit/: world.wit
crates/peerpiper-wasm-bindgen/: Cargo.toml  justfile
crates/peerpiper-wasm-bindgen/src/: bindgen.rs  delanocreds.rs  lib.rs
crates/peerpiper/src/: error.rs  lib.rs  platform.rs
crates/pinger/: Cargo.toml  README.md
crates/pinger/src/: lib.rs
crates/pinger/src/components/: mod.rs  page.rs
crates/pinger/wit/: world.wit
examples/svelte-app/: README.md  package-lock.json  package.json  vite.config.js
examples/svelte-app/src/lib/: index.js
examples/svelte-app/src/lib/examples/: Basic.svelte  Form.svelte  Loader.svelte  Wallet.svelte  importables.js  index.js
examples/svelte-app/src/routes/: +layout.svelte  +page.svelte  importables.js  wurboHandles.js
examples/vite/: README.md  importables.js  index.html  main.js  package-lock.json  package.json  pinger.component.wasm  vite.config.js
tauri-app/: README.md  justfile
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: main.rs
tauri-app/src/lib/: App.svelte
