[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.80"

[workspace.dependencies]
peerpiper = { path = "crates/peerpiper" }
peerpiper-core = { path = "crates/peerpiper-core" }
peerpiper-native = { path = "crates/peerpiper-native" }
peerpiper-browser = { path = "crates/peerpiper-browser" }
futures = "0.3.29"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = "^0.53.2"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true              # Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
