[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.80"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
peerpiper = { path = "crates/peerpiper" }
peerpiper-core = { path = "crates/peerpiper-core" }
peerpiper-native = { path = "crates/peerpiper-native" }
peerpiper-browser = { path = "crates/peerpiper-browser" }
futures = "0.3.29"
rand = "0.8"
thiserror = "1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { version = "0.54.1", git = "https://github.com/libp2p/rust-libp2p.git" }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
# for submodules
bls12_381_plus = { version = "0.8.16", features = ["expose-fields", "alloc"] }
delano-keys = { path = "./submodules/delanocreds/crates/delano-keys" }
seed-keeper-core = { path = "./submodules/seed-keeper/crates/seed-keeper-core" }
bytes = "1.5.0"

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
