[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.80"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
peerpiper = { path = "crates/peerpiper" }
peerpiper-core = { path = "crates/peerpiper-core" }
peerpiper-native = { path = "crates/peerpiper-native" }
peerpiper-browser = { path = "crates/peerpiper-browser" }
peerpiper-plugins = { path = "crates/peerpiper-plugins" }
futures = "0.3.29"
rand = "0.8"
thiserror = "1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { version = "0.54.1" }
libp2p-stream = { version = "0.2.0-alpha" }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
# for submodules
bls12_381_plus = { version = "0.8.16", features = ["expose-fields", "alloc"] }
delano-keys = { path = "./submodules/delanocreds/crates/delano-keys" }
seed-keeper-core = { path = "./submodules/seed-keeper/crates/seed-keeper-core" }
bytes = "1.5.0"
blockstore = "0.7.1"
cid = "0.11.1"

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

# until lands: https://github.com/libp2p/rust-libp2p/issues/5877
[patch.crates-io]
libp2p-webrtc-utils = { git = "https://github.com/DougAnderson444/rust-libp2p.git", branch = "core-v0.42-webrtc-utils-0.3.0" }
