[package]
name = "contact-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = {version = "0.27.0", features = ["bitflags"]}
wurbo = "0.5.0"
phonenumber = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:contact-book"

[package.metadata.component.dependencies]
