[package]
name = "extension-echo"
edition = "2021"
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[dev-dependencies]
wasmtime = { version = "21", features = ['component-model'] }
wasmtime-wasi = "21"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:extension"

[package.metadata.component.dependencies]
