[package]
name = "peerpiper-interop-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interop-tests-native"
path = "src/bin/native.rs"

[dependencies]
anyhow = "1.0.72"
futures = "0.3.29"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
peerpiper-native = { workspace = true }
axum = "0.6.19"
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "tokio"] }
rust-embed = { version = "8.0.0", features = ["include-exclude", "interpolate-folder-path"] }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["cors"] }
mime_guess = "2.0.4"

