[package]
name = "peerpiper-interop-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "interop-tests-native"
path = "src/bin/native.rs"

[dependencies]
anyhow = "1.0.72"
futures = "0.3.29"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

peerpiper = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
peerpiper-native = { workspace = true }
axum = "0.6.19"
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "tokio"] }
rust-embed = { version = "8.0.0", features = ["include-exclude", "interpolate-folder-path"] }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["cors"] }
mime_guess = "2.0.4"
thirtyfour = "=0.32.0-rc.8" # https://github.com/stevepryde/thirtyfour/issues/169

[target.'cfg(target_arch = "wasm32")'.dependencies]
peerpiper-browser = { workspace = true }
js-sys = "0.3.66"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Response', 'Window'] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
