[package]
name = "peerpiper-browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.72"
futures = "0.3.29"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3" }
cfg-if = "1"
thiserror = "1.0.50"
js-sys = "0.3.66"
peerpiper-core = { workspace = true }
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "wasm-bindgen"] }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p.git" }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.38"
gloo-utils = "0.2.0"
serde_json = "1.0.68"
tracing-wasm = { version = "0.2.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
cid = "0.11.0"
multihash-codetable = {version = "0.1.2", features = ["sha2"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# feature logging is default, includes tracing-wasm and console_error_panic_hook
[features]
default = ["logging"]
logging = ["tracing-wasm", "console_error_panic_hook"]

