[package]
name = "peerpiper-browser"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.72"
futures = "0.3.29"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3" }
cfg-if = "1"
thiserror = "1.0.50"
js-sys = "0.3.66"
peerpiper-core = { workspace = true }
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "wasm-bindgen"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.38"
gloo-utils = "0.2.0"
serde_json = "1.0"
tracing-wasm = { version = "0.2.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
cid = "0.11.0"
multihash-codetable = {version = "0.1.2", features = ["sha2"] }
wnfs = "0.2"
bytes = "1.5.0"
parking_lot = "0.12.1"
send_wrapper = { version = "0.6.0", features = ["futures"] }
chrono = "0.4"
wnfs-unixfs-file = "0.2.0"
tokio = { version = "1.34", features = ["io-util"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand_chacha = "0.3.1"
rand_core = "0.6.4"

# feature logging is default, includes tracing-wasm and console_error_panic_hook
[features]
default = ["logging"]
logging = ["tracing-wasm", "console_error_panic_hook"]

