[package]
name = "peerpiper-browser"
version = "0.1.2"
edition = "2021"
rust-version = { workspace = true }
authors = ["Doug Anderson <doug@peerpiper.io>"]
license.workspace = true
homepage = "https://github.com/PeerPiper/peerpiper/tree/master/crates/peerpiper-browser#readme"
repository = "https://github.com/peerpiper/peerpiper/tree/master/crates/peerpiper-browser"
description = "Use PeerPiper from the Browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.72"
futures = "0.3.29"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3" }
cfg-if = "1"
thiserror = "1.0.50"
js-sys = "0.3.66"
peerpiper-core = { workspace = true }
libp2p = { workspace = true, features = [
  "ed25519",
  "macros",
  "ping",
  "wasm-bindgen",
] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.38"
serde-wasm-bindgen = "0.6.5"
tracing-wasm = { version = "0.2.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
cid = { version = "0.11.1", features = ["serde"] }
multihash-codetable = { version = "0.1.2", features = ["sha2"] }
wnfs = "0.2"
bytes = "1.5.0"
parking_lot = "0.12.1"
send_wrapper = { version = "0.6.0", features = ["futures"] }
chrono = "0.4"
wnfs-unixfs-file = "0.2.0"
tokio = { version = "1.34", features = ["io-util"] }
instant = "0.1.12" # needed as a workaround for https://github.com/rustwasm/wasm-pack/issues/743 

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand_chacha = "0.3.1"
rand_core = "0.6.4"

[features]
# `instant/wasm-bindgen` makes sure it will use `js_sys` for getting the system time
# `instant/inaccurate` uses `Date.now()` instead of `performance.now()`
# see: https://github.com/rustwasm/wasm-pack/issues/743#issuecomment-2383907212
default = [
  "instant/wasm-bindgen", # needed as a workaround for https://github.com/rustwasm/wasm-pack/issues/743 
  "instant/inaccurate",   # needed as a workaround for https://github.com/rustwasm/wasm-pack/issues/743 
  "logging",
]
logging = ["tracing-wasm", "console_error_panic_hook"]
