[package]
name = "peerpiper-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-timer = "3.0.2"
rand = "0.8"
thiserror = "1"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "wasm-bindgen"] }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "quic", "tokio"]}
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p.git" }
