[package]
name = "peerpiper-handler"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:peerpiper-handler"

[package.metadata.component.dependencies]
