[package]
name = "peerpiper-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "peerpiper-native-bin"
path = "./src/bin/main.rs"

[dependencies]
futures = "0.3.29"
thiserror = "1"
peerpiper-core = { workspace = true }
libp2p = { workspace = true, features = [ "ed25519", "macros", "ping", "tokio"] }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p.git", features = ["tokio"] }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
