[package]
name = "peerpiper-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "peerpiper-native-bin"
path = "./src/bin/main.rs"

[dependencies]
futures = "0.3.29"
thiserror = "1"
peerpiper-core = { workspace = true }
bytes = { workspace = true }
libp2p = { workspace = true, features = [
  "dns",
  "ed25519",
  "macros",
  "ping",
  "tokio",
] }
libp2p-stream = { workspace = true }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
wnfs-unixfs-file = "0.2.0"
anyhow = "1.0"
blockstore = "0.7.1"
cid = "0.11.0"

[dev-dependencies]
tempfile = "3.14.0"
