[package]
name = "peerpiper-plugins"
edition = "2021"
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
peerpiper = { workspace = true }

wasmtime = { version = "25" }
wasmtime-wasi = { version = "25" }
wasi-common = { version = "25.0.1", features = ["tokio"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
libp2p = { workspace = true, features = ["ed25519", "macros", "ping", "tokio"] }
futures = "0.3.31"
async-trait = "0.1.83"
dirs = "5.0"
peerpiper-native = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
