[package]
name = "peerpiper-server"
version = "0.1.0"
edition = "2021"

[dependencies]
peerpiper = { workspace = true }

axum = "0.6.19"
anyhow = "1.0.72"
futures = "0.3.31"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["cors"] }
libp2p = { workspace = true, features = ["ed25519", "macros", "ping", "tokio"] }
thiserror = "1.0"
async-trait = "0.1.83"

# Optional dependencies
cloudflare = { version = "0.12.0", optional = true, git = "https://github.com/cloudflare/cloudflare-rs.git" }
dotenv = { version = "0.15", optional = true }

# If plugins are enabled
peerpiper-plugins = { path = "../peerpiper-plugins", optional = true }

[features]
default = ["plugins"]
cloudflare = ["dep:dotenv", "dep:cloudflare"]
plugins = ["dep:peerpiper-plugins"]
