[package]
name = "peerpiper-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = "0.6.0"
wurbo = "0.1.5"
base64ct = { version = "1.6.0", features = ["alloc"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = { version = "3.3.0", features = ["base64"] }

[dev-dependencies]
wasmtime = { version = "16", features = ['component-model'] }
wasmtime-wasi = "16.0"
thiserror = "1.0"

[package.metadata.component]
package = "peerpiper:wallet"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wit-ui" = { path = "wit/deps/seed-keeper-wit-ui" }
"seed-keeper:wallet" = { path = "wit/deps/seed-keeper-wallet" }
"delano:wit-ui" = { path = "wit/deps/delano-wit-ui" }
"delano:wallet" = { path = "wit/deps/delano-wallet" }
