[package]
name = "peerpiper-wallet"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
wurbo = "0.3.2"
base64ct = { version = "1.6.0", features = ["alloc"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = { version = "3.3.0", features = ["base64"] }
# seed-keeper-events = { path = "../../submodules/seed-keeper/crates/seed-keeper-events" }
# delano-events = { path = "../../submodules/delanocreds/crates/delano-events" }
# peerpiper = { workspace = true }

[dev-dependencies]
wasmtime = { version = "17", features = ['component-model'] }
wasmtime-wasi = "17.0"
thiserror = "1.0"

[package.metadata.component]
package = "peerpiper:wallet"

# It's not documented, but you can use `package.metadata.component.bindings` to
# set additional derive attributes for the generated bindings:
[package.metadata.component.bindings]
# derives = ["serde::Deserialize"]

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"seed-keeper:wit-ui" = { path = "wit/deps/seed-keeper-wit-ui" }
"seed-keeper:wallet" = { path = "wit/deps/seed-keeper-wallet" }
"delano:wit-ui" = { path = "wit/deps/delano-wit-ui" }
"delano:wallet" = { path = "wit/deps/delano-wallet" }
