[package]
name = "peerpiper-wasm-bindgen"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
seed-keeper-core = { path = "../../submodules/seed-keeper/crates/seed-keeper-core" }
delanocreds = { path = "../../submodules/delanocreds/crates/delanocreds" }
delano-keys = { path = "../../submodules/delanocreds/crates/delano-keys" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
zeroize = "1.6"
