[package]
name = "peerpiper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]    
# default = ["libp2p"]
## NETWORKS
# libp2p = ["dep:libp2p", "libp2p-webrtc-websys", "dep:libp2p-webrtc"]
# nostr
# swarm

## RUNTIMES
# tokio
# wasm-bindgen

[dependencies]
cfg-if = "1"
futures = "0.3.29"
rand = "0.8"
thiserror = "1"
tracing = "0.1.37"
peerpiper-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
peerpiper-browser = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
peerpiper-native = { workspace = true }
